--- a/dev/00-intro/02-00-options.html
+++ b/dev/00-intro/02-00-options.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>String Sanitization - ReadStor</title>
+        <title>Options - ReadStor</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-00-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/02-01-global.html"><strong aria-hidden="true">1.2.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../00-intro/02-01-filter.html"><strong aria-hidden="true">1.2.2.</strong> Filter</a></li><li class="chapter-item expanded "><a href="../00-intro/02-02-template.html"><strong aria-hidden="true">1.2.3.</strong> Template</a></li><li class="chapter-item expanded "><a href="../00-intro/02-03-preprocess.html"><strong aria-hidden="true">1.2.4.</strong> Pre-process</a></li><li class="chapter-item expanded "><a href="../00-intro/02-04-postprocess.html"><strong aria-hidden="true">1.2.5.</strong> Post-process</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html" class="active"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-00-options.html" class="active"><strong aria-hidden="true">1.2.</strong> Options</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/02-01-global.html"><strong aria-hidden="true">1.2.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../00-intro/02-01-filter.html"><strong aria-hidden="true">1.2.2.</strong> Filter</a></li><li class="chapter-item expanded "><a href="../00-intro/02-02-template.html"><strong aria-hidden="true">1.2.3.</strong> Template</a></li><li class="chapter-item expanded "><a href="../00-intro/02-03-preprocess.html"><strong aria-hidden="true">1.2.4.</strong> Pre-process</a></li><li class="chapter-item expanded "><a href="../00-intro/02-04-postprocess.html"><strong aria-hidden="true">1.2.5.</strong> Post-process</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -119,7 +119,7 @@
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/01-templates/05-string-sanitization.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/00-intro/02-00-options.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -148,33 +148,48 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="string-sanitization"><a class="header" href="#string-sanitization">String Sanitization</a></h1>
-<p>To avoid any unexpected behavior, certain user-provided strings are sanitized
-before they are used for naming files or directories. Characters are either
-removed or replaced with an underscore <code>_</code>.</p>
-<div class="table-wrapper"><table><thead><tr><th>Character</th><th style="text-align: center">Removed</th><th style="text-align: center">Replaced</th></tr></thead><tbody>
-<tr><td><code>\n</code></td><td style="text-align: center"><i class="fa fa-check"></i></td><td style="text-align: center"></td></tr>
-<tr><td><code>\r</code></td><td style="text-align: center"><i class="fa fa-check"></i></td><td style="text-align: center"></td></tr>
-<tr><td><code>\0</code></td><td style="text-align: center"><i class="fa fa-check"></i></td><td style="text-align: center"></td></tr>
-<tr><td><code>:</code></td><td style="text-align: center"></td><td style="text-align: center"><i class="fa fa-check"></i></td></tr>
-<tr><td><code>/</code></td><td style="text-align: center"></td><td style="text-align: center"><i class="fa fa-check"></i></td></tr>
+                        <h1 id="options"><a class="header" href="#options">Options</a></h1>
+<p>Each of the three currently available <a href="./01-commands.html">Commands</a> has its own pipeline
+for processing Apple Books' data before writing it to disk. And by extension,
+each pipeline has its own set of applicable options.</p>
+<p>The pipelines and options for these three <a href="./01-commands.html">Commands</a> are as follows:</p>
+<pre><code class="language-plaintext">╭─────────╮           Export Pipeline
+│ Global* │          ╭────────╮ ╭─────────────╮ ╔════════╗
+╰────┬────╯        ┌─┤ Filter ├─┤ Pre-process ├─╢ export ╟────────────────────┐
+     │             │ ╰────────╯ ╰─────────────╯ ╚════════╝                    │
+     │             │                                                          │
+     │             │                                                          │
+     │             │  Render Pipeline                                         │
+     │             │ ╭──────────╮                                             │
+     │             │ │ Template ├───────────────┐                             │
+     │             │ ╰──────────╯               │                             │
+     │ ┌╌╌╌╌╌╌╌╌╌┐ │ ╭────────╮ ╭─────────────╮ │ ╔════════╗ ╭──────────────╮ │ ┌╌╌╌╌╌╌╌┐
+     █─┤ Extract ├─┴─┤ Filter ├─┤ Pre-process ├─┴─╢ render ╟─┤ Post-process ├─┼─┤ Write │
+     │ └╌╌╌╌╌╌╌╌╌┘   ╰────────╯ ╰─────────────╯   ╚════════╝ ╰──────────────╯ │ └╌╌╌╌╌╌╌┘
+     │                                                                        │
+     │                                                                        │
+     │  Backup Pipeline                                                       │
+     │ ╔════════╗                                                             │
+     └─╢ backup ╟─────────────────────────────────────────────────────────────┘
+       ╚════════╝
+</code></pre>
+<div class="table-wrapper"><table><thead><tr><th>Name</th><th>Affects Commands</th><th>Options For</th></tr></thead><tbody>
+<tr><td>Global</td><td>All</td><td>-</td></tr>
+<tr><td>Filter</td><td><code>render</code> <code>export</code></td><td>Filtering down books/annotations.</td></tr>
+<tr><td>Template</td><td><code>render</code></td><td>Configuring templates.</td></tr>
+<tr><td>Pre-process</td><td><code>render</code> <code>export</code></td><td>Processing before running Command.</td></tr>
+<tr><td>Post-process</td><td><code>render</code></td><td>Processing after running Command.</td></tr>
 </tbody></table>
 </div>
-<p>This following values are sanitized:</p>
-<ul>
-<li><a href="./02-01-template-groups.html">Template Group</a> set in the <code>group</code> config key.</li>
-<li>The rendered values from <a href="./02-05-names.html">Names</a> set in the <code>names</code> config key.</li>
-</ul>
-
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../01-templates/04-backlinks.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../00-intro/01-commands.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../01-templates/06-00-context-reference.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../00-intro/02-01-global.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -184,11 +199,11 @@ removed or replaced with an underscore <code>_</code>.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../01-templates/04-backlinks.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../00-intro/01-commands.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../01-templates/06-00-context-reference.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../00-intro/02-01-global.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
