--- a/dev/00-intro/02-03-preprocess.html
+++ b/dev/00-intro/02-03-preprocess.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Options - ReadStor</title>
+        <title>Pre-process - ReadStor</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-options.html" class="active"><strong aria-hidden="true">1.2.</strong> Options</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-00-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/02-01-global.html"><strong aria-hidden="true">1.2.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../00-intro/02-01-filter.html"><strong aria-hidden="true">1.2.2.</strong> Filter</a></li><li class="chapter-item expanded "><a href="../00-intro/02-02-template.html"><strong aria-hidden="true">1.2.3.</strong> Template</a></li><li class="chapter-item expanded "><a href="../00-intro/02-03-preprocess.html" class="active"><strong aria-hidden="true">1.2.4.</strong> Pre-process</a></li><li class="chapter-item expanded "><a href="../00-intro/02-04-postprocess.html"><strong aria-hidden="true">1.2.5.</strong> Post-process</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -119,7 +119,7 @@
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/00-intro/02-options.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/00-intro/02-03-preprocess.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -148,54 +148,10 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="options"><a class="header" href="#options">Options</a></h1>
-<h2 id="global"><a class="header" href="#global">Global</a></h2>
-<h3 id="--output-directory-path"><a class="header" href="#--output-directory-path"><code>--output-directory &lt;PATH&gt;</code></a></h3>
-<p>Set the output directory for all <a href="./01-commands.html">Commands</a>. Defaults to <code>~/.readstor</code>.</p>
-<h3 id="--databases-directory-path"><a class="header" href="#--databases-directory-path"><code>--databases-directory &lt;PATH&gt;</code></a></h3>
-<p>Set a custom databases directory.</p>
-<p>This can be useful when running ReadStor on databases backed-up with the
-<a href="./01-commands.html#backup"><code>backup</code></a> command. The output structure the <a href="./01-commands.html#backup"><code>backup</code></a> command
-creates is identical to the required databases directory structure.</p>
-<p>The databases directory should contain the following structure:</p>
-<pre><code class="language-plaintext">[databases-directory]
- │
- ├─ AEAnnotation
- │  ├─ AEAnnotation*.sqlite
- │  └─ ...
- │
- ├─ BKLibrary
- │  ├─ BKLibrary*.sqlite
- │  └─ ...
- └─ ...
-</code></pre>
-<h3 id="--force"><a class="header" href="#--force"><code>--force</code></a></h3>
-<p>Run even if Apple Books is currently running.</p>
-<h3 id="--quiet"><a class="header" href="#--quiet"><code>--quiet</code></a></h3>
-<p>Silence output messages.</p>
-<h2 id="template-options"><a class="header" href="#template-options">Template Options</a></h2>
-<h3 id="--templates-directory-path"><a class="header" href="#--templates-directory-path"><code>--templates-directory &lt;PATH&gt;</code></a></h3>
-<p>Set a custom templates directory.</p>
-<blockquote>
-<p><i class="fa fa-exclamation-circle"></i> See the default <a href="https://github.com/tnahs/readstor/tree/main/templates">templates</a>
-for fully working examples.</p>
-</blockquote>
-<h3 id="--template-group-group"><a class="header" href="#--template-group-group"><code>--template-group &lt;GROUP&gt;</code></a></h3>
-<p>Render specified <a href="../01-templates/02-01-template-groups.html">Template Groups</a>.</p>
-<blockquote>
-<p><i class="fa fa-exclamation-circle"></i> Passing nonexistent
-<a href="../01-templates/02-01-template-groups.html">Template Groups</a> will return an error.</p>
-</blockquote>
-<p>Multiple <a href="../01-templates/02-01-template-groups.html">Template Groups</a> can be passed using the following
-syntax.</p>
-<pre><code class="language-sh">readstor \
-    # ...
-    --template-group basic
-    --template-group using-backlinks
-    # ..
-</code></pre>
-<h2 id="pre-process-options"><a class="header" href="#pre-process-options">Pre-process Options</a></h2>
-<h3 id="--extract-tags"><a class="header" href="#--extract-tags"><code>--extract-tags</code></a></h3>
+                        <h1 id="pre-process"><a class="header" href="#pre-process">Pre-process</a></h1>
+<p>The following options affect only the <a href="./01-commands.html#render"><code>render</code></a> and <a href="./01-commands.html#export"><code>export</code></a>
+commands.</p>
+<h2 id="--extract-tags"><a class="header" href="#--extract-tags"><code>--extract-tags</code></a></h2>
 <p>Extract <code>#tags</code> from <a href="../01-templates/06-02-annotation.html"><code>annotation.notes</code></a>.</p>
 <p>All matches are removed from <a href="../01-templates/06-02-annotation.html"><code>annotation.notes</code></a> and placed into
 <a href="../01-templates/06-02-annotation.html"><code>annotation.tags</code></a>. Additionally, all <code>#tags</code> within a book are
@@ -204,15 +160,15 @@ compiled and placed them into <a href="../01-templates/06-01-book.html"><code>bo
 <p><i class="fa fa-exclamation-circle"></i> Tags <em>must</em> start with a hash symbol
 <code>#</code> followed by a letter <code>[a-zA-Z]</code>.</p>
 </blockquote>
-<h3 id="--normalize-whitespace"><a class="header" href="#--normalize-whitespace"><code>--normalize-whitespace</code></a></h3>
+<h2 id="--normalize-whitespace"><a class="header" href="#--normalize-whitespace"><code>--normalize-whitespace</code></a></h2>
 <p>Normalize whitespace in <a href="../01-templates/06-02-annotation.html"><code>annotation.body</code></a>.</p>
 <p>Trims whitespace and replaces all line-breaks with two consecutive line-breaks:
 <code>\n\n</code>.</p>
-<h3 id="--ascii-all"><a class="header" href="#--ascii-all"><code>--ascii-all</code></a></h3>
+<h2 id="--ascii-all"><a class="header" href="#--ascii-all"><code>--ascii-all</code></a></h2>
 <p>Convert all Unicode characters to ASCII.</p>
 <p>All Unicode characters found in <a href="../01-templates/06-01-book.html"><code>book.title</code></a>, <a href="../01-templates/06-01-book.html"><code>book.author</code></a> and
 <a href="../01-templates/06-02-annotation.html"><code>annotation.body</code></a> are converted to ASCII.</p>
-<h3 id="--ascii-symbols"><a class="header" href="#--ascii-symbols"><code>--ascii-symbols</code></a></h3>
+<h2 id="--ascii-symbols"><a class="header" href="#--ascii-symbols"><code>--ascii-symbols</code></a></h2>
 <p>Convert &quot;smart&quot; Unicode symbols to ASCII.</p>
 <p>&quot;Smart&quot; Unicode symbols found in <a href="../01-templates/06-01-book.html"><code>book.title</code></a>, <a href="../01-templates/06-01-book.html"><code>book.author</code></a>
 and <a href="../01-templates/06-02-annotation.html"><code>annotation.body</code></a> are converted to ASCII.</p>
@@ -233,36 +189,16 @@ and <a href="../01-templates/06-02-annotation.html"><code>annotation.body</code>
 <li><a href="https://daringfireball.net/projects/smartypants/">Daring Fireball - SmartyPants</a></li>
 <li><a href="https://python-markdown.github.io/extensions/smarty/">Python-Markdown - SmartyPants</a></li>
 </ul>
-<h2 id="post-process-options"><a class="header" href="#post-process-options">Post-process Options</a></h2>
-<h3 id="--trim-blocks"><a class="header" href="#--trim-blocks"><code>--trim-blocks</code></a></h3>
-<p>Trim any blocks left after rendering.</p>
-<blockquote>
-<p><i class="fa fa-exclamation-circle"></i> Currently, this is a <em>very</em> naive
-implementation that mimics what <a href="https://docs.rs/tera/latest/tera/"><code>tera</code></a> might do if/when it adds
-<a href="https://github.com/Keats/tera/issues/637"><code>trim_blocks</code></a>. It is by no means smart and will just normalize
-whitespace regardless of what the template requested.</p>
-</blockquote>
-<h3 id="--wrap-text"><a class="header" href="#--wrap-text"><code>--wrap-text</code></a></h3>
-<p>Wrap text to a maximum character width.</p>
-<p>Maximum line length is not guaranteed as long words are not broken if their
-length exceeds the maximum. Hyphenation is not used, however, existing hyphen
-can be split on to insert a line-break.</p>
-<blockquote>
-<p><i class="fa fa-exclamation-circle"></i> This will naively wrap all the
-text inside a rendered file regardless its structure. Use with caution!
-Extremely low values may cause unexpected results. Values above <code>80</code> or so
-are recommended.</p>
-</blockquote>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../00-intro/01-commands.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../00-intro/02-02-template.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../01-templates/00-templates.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../00-intro/02-04-postprocess.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -272,11 +208,11 @@ are recommended.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../00-intro/01-commands.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../00-intro/02-02-template.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../01-templates/00-templates.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../00-intro/02-04-postprocess.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
